# cogmcp

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.claude-workspace/integration/: MERGE_PLAN.md
.claude-workspace/scripts/: status-check.sh  validate-dependencies.sh  worktree-setup.sh
.claude-workspace/worktrees/hybrid-search-integration/: STATUS.yml  TASK.md
.claude-workspace/worktrees/mcp-message-types/: STATUS.yml  TASK.md
.claude-workspace/worktrees/mcp-request-handler/: STATUS.yml  TASK.md
.claude-workspace/worktrees/mcp-server-loop/: STATUS.yml  TASK.md
.claude-workspace/worktrees/mcp-stdio-transport/: STATUS.yml  TASK.md
.claude-workspace/worktrees/onnx-embedding-engine/: STATUS.yml  TASK.md
.claude-workspace/worktrees/semantic-search-impl/: STATUS.yml  TASK.md
.claude-workspace/worktrees/subtask-1-symbol-types/: STATUS.yml  TASK.md
.claude-workspace/worktrees/subtask-2-parser-integration/: STATUS.yml  TASK.md
.claude-workspace/worktrees/subtask-3-storage-schema/: STATUS.yml  TASK.md
.claude-workspace/worktrees/subtask-4-indexer-hookup/: STATUS.yml  TASK.md
.claude-workspace/worktrees/vector-storage-layer/: STATUS.yml  TASK.md
crates/cogmcp-context/: Cargo.toml
crates/cogmcp-context/src/: api.rs  chunker.rs  lib.rs  prioritizer.rs
crates/cogmcp-core/: Cargo.toml
crates/cogmcp-core/src/: actionable_error.rs  config.rs  error.rs  lib.rs  streaming.rs  types.rs
crates/cogmcp-embeddings/: Cargo.toml
crates/cogmcp-embeddings/src/: inference.rs  lazy.rs  lib.rs  model.rs  quantize.rs  tokenizer.rs
crates/cogmcp-embeddings/tests/: integration.rs
crates/cogmcp-index/: Cargo.toml
crates/cogmcp-index/src/: codebase.rs  dependencies.rs  git.rs  git_scoring.rs  lib.rs  parallel_indexer.rs  parallel_walker.rs  parser.rs  parser_pool.rs
crates/cogmcp-search/: Cargo.toml
crates/cogmcp-search/src/: cache.rs  hnsw.rs  hybrid.rs  lib.rs  semantic.rs  streaming.rs
crates/cogmcp-server/: Cargo.toml
crates/cogmcp-server/src/: lib.rs  main.rs  response_builder.rs  runner.rs  server.rs  status.rs  streaming.rs
crates/cogmcp-server/src/handler/: methods.rs  mod.rs
crates/cogmcp-server/src/protocol/: errors.rs  messages.rs
crates/cogmcp-server/src/tools/: mod.rs
crates/cogmcp-server/src/transport/: mod.rs  stdio.rs
crates/cogmcp-server/tests/: integration.rs  lazy_loading.rs
crates/cogmcp-storage/: Cargo.toml
crates/cogmcp-storage/src/: cache.rs  lib.rs  lru_cache.rs  pool.rs  sqlite.rs  tantivy_index.rs
crates/cogmcp-watcher/: Cargo.toml
crates/cogmcp-watcher/src/: config_watcher.rs  debouncer.rs  handler.rs  lib.rs  prioritizer.rs  realtime.rs
crates/cogmcp-watcher/tests/: integration.rs
crates/contextmcp-context/: Cargo.toml
crates/contextmcp-context/src/: formatter.rs  lib.rs
crates/contextmcp-core/: Cargo.toml
crates/contextmcp-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/contextmcp-embeddings/: Cargo.toml
crates/contextmcp-embeddings/src/: inference.rs  lib.rs  model.rs  tokenizer.rs
crates/contextmcp-embeddings/tests/: integration.rs
crates/contextmcp-index/: Cargo.toml
crates/contextmcp-index/src/: codebase.rs  dependencies.rs  git.rs  lib.rs  parser.rs
crates/contextmcp-search/: Cargo.toml
crates/contextmcp-search/src/: hybrid.rs  lib.rs  semantic.rs  text.rs
crates/contextmcp-server/: Cargo.toml
crates/contextmcp-server/src/: lib.rs  main.rs  runner.rs  server.rs
crates/contextmcp-server/src/handler/: methods.rs  mod.rs
crates/contextmcp-server/src/protocol/: methods.rs  mod.rs
crates/contextmcp-server/src/tools/: mod.rs
crates/contextmcp-server/tests/: integration.rs
crates/contextmcp-storage/: Cargo.toml
crates/contextmcp-storage/src/: lib.rs  sqlite.rs  tantivy_index.rs
crates/contextmcp-watcher/: Cargo.toml
crates/contextmcp-watcher/src/: lib.rs  prioritizer.rs  realtime.rs
homebrew/: cogmcp.rb
