[package]
name = "cogmcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
arc-swap = "1.7"
tokio = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
