[package]
name = "cogmcp-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cogmcp-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# ONNX Runtime for inference
ort = { version = "2.0.0-rc.9", default-features = false, features = ["download-binaries", "copy-dylibs", "ndarray", "tls-native"] }

# Tokenization
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Tensor operations
ndarray = "0.16"
ndarray_017 = { package = "ndarray", version = "0.17" }

# HTTP client for model download
ureq = { version = "2.10", features = ["json"] }

# File utilities
dirs = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
