[package]
name = "cogmcp-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cogmcp-core = { workspace = true }
cogmcp-storage = { workspace = true }
cogmcp-embeddings = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-ruby = { workspace = true }
git2 = { workspace = true }
cargo_toml = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
