[package]
name = "cogmcp-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cogmcp-core = { workspace = true }
cogmcp-storage = { workspace = true }
cogmcp-embeddings = { workspace = true }
tantivy = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
instant-distance = "0.6"  # HNSW approximate nearest neighbor search
bytemuck = { version = "1.14", features = ["derive"] }  # For efficient serialization
