[package]
name = "cogmcp-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cogmcp-core = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
