[package]
name = "contextmcp-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
contextmcp-core = { workspace = true }
contextmcp-storage = { workspace = true }
contextmcp-search = { workspace = true }
contextmcp-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
