[package]
name = "cogmcp-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cogmcp-core = { workspace = true }
cogmcp-storage = { workspace = true }
cogmcp-search = { workspace = true }
cogmcp-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
