[package]
name = "cogmcp-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

# This crate is a stub - no external models used
# All search is keyword-based via Tantivy

[dependencies]
cogmcp-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
