[package]
name = "contextmcp-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
contextmcp-core = { workspace = true }
contextmcp-storage = { workspace = true }
tantivy = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
