[package]
name = "contextmcp-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
contextmcp-core = { workspace = true }
contextmcp-storage = { workspace = true }
contextmcp-embeddings = { workspace = true }
tantivy = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
