[package]
name = "contextmcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "contextmcp"
path = "src/main.rs"

[dependencies]
contextmcp-core = { workspace = true }
contextmcp-storage = { workspace = true }
contextmcp-index = { workspace = true }
contextmcp-search = { workspace = true }
contextmcp-embeddings = { workspace = true }
contextmcp-watcher = { workspace = true }
contextmcp-context = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
