[package]
name = "cogmcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cogmcp"
path = "src/main.rs"

[dependencies]
cogmcp-core = { workspace = true }
cogmcp-storage = { workspace = true }
cogmcp-index = { workspace = true }
cogmcp-search = { workspace = true }
cogmcp-embeddings = { workspace = true }
cogmcp-watcher = { workspace = true }
cogmcp-context = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
