[package]
name = "contextmcp-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
contextmcp-core = { workspace = true }
rusqlite = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
